# MESHBOX

.kilo/plans/: 1775683097511-happy-falcon.md
meshbox-os/: .gitignore  AGENTS.md  LICENSE  README.md  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt
meshbox-os/docker/: Dockerfile  docker-compose.yml
meshbox-os/docs/: openapi.yaml
meshbox-os/meshbox/: __init__.py  __main__.py  cli.py  config.py  crypto.py  daemon.py  directory.py  files.py  main.py  network.py  observability.py  profiles.py  storage.py  tor.py  updater.py
meshbox-os/meshbox/api/: __init__.py  rest_api.py
meshbox-os/meshbox/crypto/: __init__.py  double_ratchet.py  group_encryption.py  node_identity.py
meshbox-os/meshbox/nat/: __init__.py  traversal.py
meshbox-os/meshbox/node/: __init__.py  bootstrap.py  dht.py  meshbox_daemon.py  rendezvous.py  sanp_server.py
meshbox-os/meshbox/sanp/: __init__.py  gossip.py  peer_manager.py  protocol.py  router.py
meshbox-os/meshbox/tor_service/: __init__.py  tor_config.py  tor_manager.py
meshbox-os/meshbox/transport/: __init__.py  bluetooth_mesh.py  quic_transport.py  webrtc_transport.py
meshbox-os/meshbox/web/: __init__.py  __main__.py
meshbox-os/meshbox/web/static/css/: style.css
meshbox-os/meshbox/web/static/js/: app.js
meshbox-os/meshbox/web/templates/: base.html  channel_view.html  channels.html  contacts.html  dashboard.html  files.html  inbox.html  map.html  network.html  outbox.html  profile.html  qr.html  read.html  send.html  settings.html  setup.html  sos.html  tor.html
meshbox-os/scripts/: add_to_network.sh  install_meshbox.sh  simulate_network.py
meshbox-os/tests/: test_dht.py  test_nat_traversal.py  test_node_identity.py  test_quic_transport.py  test_sanp_gossip.py  test_sanp_peers.py  test_sanp_protocol.py  test_sanp_router.py  test_tor_config.py  test_transport.py  test_webrtc_transport.py
